# model_monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
contracts/examples/: support_response.yaml
dashboards/: grafana.json
data/: simulate_stream.py  simulator.py
data/metrics/: metrics.db
data/reference/: feature_schema.json  reference_stats.json
docs/: demo_plot.py  webhook_integration_examples.md  webhook_payload_example.json
metrics/: prometheus.yml
metrics/grafana/provisioning/dashboards/: model_monitor.yml
metrics/grafana/provisioning/datasources/: prometheus.yml
models/: active.txt
notebooks/: README.md  drift_simulation.ipynb  monitor_evaluation.ipynb  simulation_analysis.ipynb  simulation_analysis.md  uci_adult_drift_demo.ipynb
scripts/: bench_evaluators.py  demo_contracts.py
src/model_monitor/: __init__.py  monitor.py
src/model_monitor/api/: __init__.py  dashboard.py  health.py  ingest.py  main.py  metrics.py  schemas.py  startup.py
src/model_monitor/cli/: __init__.py  export.py  replay.py
src/model_monitor/config/: __init__.py  drift.yaml  logging_config.py  model.yaml  retrain.yaml  rollback.yaml  settings.py  trust_score.yaml
src/model_monitor/contracts/: contract.py  evaluation.py  evaluator.py  guarantee.py  loader.py  outcome.py  policy.py  registry.py  results.py  validator.py
src/model_monitor/contracts/behavioral/: context.py  evaluation.py  evaluators.py  llm_judge.py  policy.py  records.py  runner.py
src/model_monitor/contracts/evaluators/: json_schema.py  json_validity.py
src/model_monitor/core/: __init__.py  decision_analytics.py  decision_diff.py  decision_engine.py  decision_executor.py  decision_explainer.py  decision_explanation.py  decision_history.py  decision_record.py  decision_runner.py  decision_schema.py  decision_snapshot.py  decisions.py  default_model_action_executor.py  model_action_executor.py  model_action_executor_protocol.py  model_actions.py  model_transition.py
src/model_monitor/decision/: replay.py
src/model_monitor/decision/policies/: strict_behavior.py
src/model_monitor/inference/: __init__.py  predict.py  shadow.py
src/model_monitor/monitoring/: __init__.py  aggregation.py  alerting.py  analytics.py  causal_drift.py  conformal.py  cusum.py  data_quality.py  decision_analytics.py  decision_history.py  decision_logger.py  drift.py  invariants.py  logging_config.py  metrics.py  metrics_history.py  mmd.py  output_drift.py  raw_data_buffer.py  regression.py  retrain_buffer.py  shap_attribution.py  threshold_advisor.py  thresholds.py  trust_score.py  types.py  windows.py
src/model_monitor/monitoring/behavioral/evaluators/: json_schema.py  json_validity.py  refusal_policy.py
src/model_monitor/scripts/: demo_plot.py  run_simulation.py  simulation_loop.py
src/model_monitor/storage/: __init__.py  alert_store.py  behavioral_decision_store.py  db.py  decision_history.py  decision_store.py  metrics_store.py  metrics_summary_history_store.py  metrics_summary_store.py  migrations.py  model_store.py  snapshot_store.py
src/model_monitor/storage/models/: __init__.py  alert_record.py  behavioral_record.py  decision_record.py  metrics_models.py  metrics_record.py  metrics_summary.py  metrics_summary_history.py  snapshot_record.py
src/model_monitor/training/: __init__.py  evaluation.py  model_card.py  promotion.py  retrain_pipeline.py  train.py
src/model_monitor/ui/: decision_analytics.py  decision_explanation.py  streamlit_app.py
src/model_monitor/utils/: __init__.py  io.py  stats.py  stream_simulator.py  time.py
tests/: conftest.py  test_aggregation.py  test_alerting.py  test_api_routes.py  test_behavioral_contracts.py  test_behavioral_runner_integration.py  test_behavioral_store.py  test_behavioral_wiring.py  test_behavioural_contracts.py  test_bootstrap_promotion.py  test_causal_drift.py  test_circuit_breaker.py  test_config_and_reference_stats.py  test_conformal_monitor.py  test_contracts_infrastructure.py  test_coverage_gaps.py  test_cusum_detector.py  test_dashboard_auth.py  test_data_quality.py  test_decision_analytics_and_explainer.py  test_decision_diff_and_history.py  test_decision_engine.py  test_decision_engine_boundaries.py  test_decision_explanation.py  test_decision_flow_end_to_end.py  test_decision_hysteresis.py  test_default_action_executor.py  test_drift.py  test_export.py  test_has_candidate_and_promote_guard.py  test_ingest_endpoint.py  test_integration_e2e.py  test_invariants.py  test_llm_judge_evaluator.py  test_metrics_store.py  test_metrics_summary_history_store.py  test_migrations.py  test_mmd_detector.py  test_model_card.py  test_model_store.py  (+34 more)
tests/core/: test_decision_executor.py  test_decision_executor_idempotent.py
zzz removed dashboard/: app.py  metrics_history.py  plots.py
