[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-monitor"
version = "0.1.0"
description = "ML model monitoring with drift detection and behavioral contracts"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "streamlit",
    "joblib",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pyyaml",
    "jsonschema",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio", "ruff", "mypy"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["asyncio: mark test as asyncio"]